# tcc

./: .gitignore  README.md  pyproject.toml
algoritmos/: __main__.py  attacks.py  experiments.py  graphs.py  machine_learning.py  trajetoria.py
algoritmos/naghizade2020/: __main__.py  cli.py  flipflop.py  naghizade.py  treat_data.py
algoritmos/tu2017/: README.md  __main__.py  cli.py  cost_matrix.py  graph.py  region.py  similarity.py  treatData.py  treat_data.py  tu.py
algoritmos/utils/: generator.py  graph.py  io.py  math_utils.py  processed.py  region.py  semantic.py  trajetoria.py  trajetory.py
algoritmos/zhang2015/: __main__.py  cli.py  group.py  poi.py  roi.py  zhang.py
tests/: test_poi.py  test_region.py  test_semantic.py  test_trajectories.py  test_treatData.py
tests/resources/: datasetTest.csv
