[tool.poetry]
name = "algoritmos"
version = "0.1.0"
description = ""
authors = ["Nicole Schmidt <nicoleschmidt2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.3.0"
numpy = "^1.23.4"
networkx = "^2.8.8"
setuptools = "^67.7.2"
pytest = "^7.4.0"
matplotlib = "^3.8.0"
requests = "^2.31.0"
polyline = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
